--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:flask]
-command=flask run --host=0.0.0.0 --port=5000
+command=/usr/local/bin/flask run --host=0.0.0.0 --port=5000
 directory=/app
 autostart=true
 autorestart=true
